--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <form>
       <!--⬇ row search ⬇-->
       <div class="row w-75 mx-auto">
-        <div class="col-8">
+        <div class="col-md-8 mb-2 mb-md-0">
           <div class="input-group">
             <div class="input-group-prepend">
               <span class="input-group-text"><i class="fas fa-gamepad"></i></span>
@@ -25,7 +25,7 @@
             <input type="text" id="input-title" class="form-control" placeholder="Game Title">
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-md-4">
           <button id="btn-search" type="submit" class="btn btn-primary btn-block"><span class="font-weight-bold">Search</span></button>
         </div>
       </div>
@@ -36,7 +36,7 @@
       <!--⬇ row options ⬇-->
       <div class="row w-75 mx-auto">
         <!--⬇ col gender ⬇-->
-        <div class="col-4">
+        <div class="col-md-4">
           <p class="m-0">Gender: </p>
           <div class="input-group">
             <input type="text" id="input-genre" api-value="" api-id="none" class="form-control bg-white" aria-label="Text input with dropdown button" value="All" disabled>
@@ -51,7 +51,7 @@
         <!--⬆ col gender ⬆-->
         
         <!--⬇ col year ⬇-->
-        <div class="col-4">
+        <div class="col-md-4">
           <p class="m-0">Released Year: </p>
           <div class="input-group">
             <input type="text" id="input-year" api-value="" class="form-control bg-white" aria-label="Text input with dropdown button" value="Any" disabled>
@@ -66,7 +66,7 @@
         <!--⬆ col year ⬆-->
         
         <!--⬇ col platform ⬇-->
-        <div class="col-4">
+        <div class="col-md-4">
           <p class="m-0">Platform: </p>
           <div class="input-group">
             <input type="text" id="input-platform" api-value="" class="form-control bg-white" aria-label="Text input with dropdown button" value="Any" disabled>
